--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -1,4 +1,4 @@
-<h1>My Article Reader App</h1>
+<h1>Kitten Articles</h1>
 
 <nav>
   <a *ngFor="let nav of navItems" [routerLink]="[nav.routeName]">{{nav.name}}</a>
